Fixed aligned panel not computing x coordinate properly when zooming on tree

--- a/ete4/smartview/gui/static/gui.css
+++ b/ete4/smartview/gui/static/gui.css
@@ -204,6 +204,7 @@ kbd {
 /* Total width */
 .tp-dfwv {
     width: 330px !important;
+    z-index: 2;
 }
 
 .tp-dfwv * {
